third attempt to fix topbar on iphone

--- a/src/components/Topbar/Topbar.tsx.css
+++ b/src/components/Topbar/Topbar.tsx.css
@@ -17,7 +17,7 @@
 
 .MuiButtonBase-root.MuiMenuItem-root.MuiMenuItem-root {
     margin-bottom: 0.2em;
-    max-width: 10em;
+    max-width: 11em;
     background-color: #40444f !important;
     display: flex!important;
     justify-content: flex-start !important;
